SPL: Structure of paper defined

--- a/papers/spl/literature.bib
+++ b/papers/spl/literature.bib
@@ -2,6 +2,21 @@
 % Encoding: Cp1252
 
 
+@Article{Katayama2001,
+  Title                    = {{Performance of simulated annealing-based heuristic for the unconstrained binary quadratic programming problem}},
+  Author                   = {Kengo Katayama and Hiroyuki Narihisa},
+  Journal                  = {European Journal of Operational Research},
+  Year                     = {2001},
+
+  Month                    = oct,
+  Number                   = {1},
+  Pages                    = {103--19},
+  Volume                   = {134},
+
+  Owner                    = {usimhuber},
+  Timestamp                = {2016.11.25}
+}
+
 @InProceedings{Zeng2015,
   Title                    = {{Mining Temporal Lag from Fluctuating Events for Correlation and Root Cause Analysis}},
   Author                   = {Chunqiu Zeng and Liang Tang and Tao Li and Larisa Shwartz and Genady Ya. Grabarnik},
