--- a/papers/spl/paper.tex
+++ b/papers/spl/paper.tex
@@ -1,63 +1,8 @@
-
-%% bare_jrnl.tex
-%% V1.4b
-%% 2015/08/26
-%% by Michael Shell
-%% see http://www.michaelshell.org/
-%% for current contact information.
-%%
-%% This is a skeleton file demonstrating the use of IEEEtran.cls
-%% (requires IEEEtran.cls version 1.8b or later) with an IEEE
-%% journal paper.
-%%
-%% Support sites:
-%% http://www.michaelshell.org/tex/ieeetran/
-%% http://www.ctan.org/pkg/ieeetran
-%% and
-%% http://www.ieee.org/
-
-%%*************************************************************************
-%% Legal Notice:
-%% This code is offered as-is without any warranty either expressed or
-%% implied; without even the implied warranty of MERCHANTABILITY or
-%% FITNESS FOR A PARTICULAR PURPOSE! 
-%% User assumes all risk.
-%% In no event shall the IEEE or any contributor to this code be liable for
-%% any damages or losses, including, but not limited to, incidental,
-%% consequential, or any other damages, resulting from the use or misuse
-%% of any information contained here.
-%%
-%% All comments are the opinions of their respective authors and are not
-%% necessarily endorsed by the IEEE.
-%%
-%% This work is distributed under the LaTeX Project Public License (LPPL)
-%% ( http://www.latex-project.org/ ) version 1.3, and may be freely used,
-%% distributed and modified. A copy of the LPPL, version 1.3, is included
-%% in the base LaTeX documentation of all distributions of LaTeX released
-%% 2003/12/01 or later.
-%% Retain all contribution notices and credits.
-%% ** Modified files should be clearly indicated as such, including  **
-%% ** renaming them and changing author support contact information. **
-%%*************************************************************************
-
-
-% *** Authors should verify (and, if needed, correct) their LaTeX system  ***
-% *** with the testflow diagnostic prior to trusting their LaTeX platform ***
-% *** with production work. The IEEE's font choices and paper sizes can   ***
-% *** trigger bugs that do not appear when using other class files.       ***                          ***
-% The testflow support page is at:
-% http://www.michaelshell.org/tex/testflow/
-
-
-
 \documentclass[journal]{IEEEtran}
 %
 % If IEEEtran.cls has not been installed into the LaTeX system files,
 % manually specify the path to it like:
 % \documentclass[journal]{../sty/IEEEtran}
-
-
-
 
 
 % Some very useful LaTeX packages include:
@@ -106,19 +51,11 @@
 % The documentation is contained in the cite.sty file itself.
 
 
-
-
-
-
 % *** GRAPHICS RELATED PACKAGES ***
 %
 \ifCLASSINFOpdf
-  % \usepackage[pdftex]{graphicx}
-  % declare the path(s) where your graphic files are
-  % \graphicspath{{../pdf/}{../jpeg/}}
-  % and their extensions so you won't have to specify these with
-  % every instance of \includegraphics
-  % \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
+  \usepackage[pdftex]{graphicx}
+	\graphicspath{{./figures/}}
 \else
   % or other class option (dvipsone, dvipdf, if not using dvips). graphicx
   % will default to the driver specified in the system graphics.cfg if no
@@ -151,14 +88,21 @@
 % http://www.tug.org/applications/pdftex
 
 
-
-
-
 % *** MATH PACKAGES ***
 %
-%\usepackage{amsmath}
-% A popular package from the American Mathematical Society that provides
-% many useful and powerful commands for dealing with mathematics.
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{bm} % correct bold symbols, like \bm
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{mathrsfs}
+\usepackage{theorem}
+\usepackage{dsfont}
+\usepackage{nicefrac}
+\usepackage{mathtools}
+\mathtoolsset{showonlyrefs}
 %
 % Note that the amsmath package sets \interdisplaylinepenalty to 10000
 % thus preventing page breaks from occurring within multiline equations. Use:
@@ -170,42 +114,15 @@
 
 
 
-
-
 % *** SPECIALIZED LIST PACKAGES ***
 %
 %\usepackage{algorithmic}
-% algorithmic.sty was written by Peter Williams and Rogerio Brito.
-% This package provides an algorithmic environment fo describing algorithms.
-% You can use the algorithmic environment in-text or within a figure
-% environment to provide for a floating algorithm. Do NOT use the algorithm
-% floating environment provided by algorithm.sty (by the same authors) or
-% algorithm2e.sty (by Christophe Fiorio) as the IEEE does not use dedicated
-% algorithm float types and packages that provide these will not provide
-% correct IEEE style captions. The latest version and documentation of
-% algorithmic.sty can be obtained at:
-% http://www.ctan.org/pkg/algorithms
-% Also of interest may be the (relatively newer and more customizable)
-% algorithmicx.sty package by Szasz Janos:
-% http://www.ctan.org/pkg/algorithmicx
-
 
 
 
 % *** ALIGNMENT PACKAGES ***
 %
 %\usepackage{array}
-% Frank Mittelbach's and David Carlisle's array.sty patches and improves
-% the standard LaTeX2e array and tabular environments to provide better
-% appearance and additional user controls. As the default LaTeX2e table
-% generation code is lacking to the point of almost being broken with
-% respect to the quality of the end results, all users are strongly
-% advised to use an enhanced (at the very least that provided by array.sty)
-% set of table tools. array.sty is already installed on most systems. The
-% latest version and documentation can be obtained at:
-% http://www.ctan.org/pkg/array
-
-
 % IEEEtran contains the IEEEeqnarray family of commands that can be used to
 % generate multiline equations as well as matrices, tables, etc., of high
 % quality.
@@ -249,12 +166,7 @@
 % guaranteed to be preserved. Thus, an unpatched LaTeX2e can allow a
 % single column figure to be placed prior to an earlier double column
 % figure.
-% Be aware that LaTeX2e kernels dated 2015 and later have fixltx2e.sty's
-% corrections already built into the system in which case a warning will
-% be issued if an attempt is made to load fixltx2e.sty as it is no longer
-% needed.
-% The latest version and documentation can be found at:
-% http://www.ctan.org/pkg/fixltx2e
+
 
 
 %\usepackage{stfloats}
@@ -325,8 +237,6 @@
 % page by themselves.
 
 
-
-
 % *** PDF, URL AND HYPERLINK PACKAGES ***
 %
 %\usepackage{url}
@@ -336,8 +246,20 @@
 % http://www.ctan.org/pkg/url
 % Basically, \url{my_url_here}.
 
+\usepackage{color}
+\def\Del#1{{\color{red}\sout{#1}}}
+\def\OldNew#1#2{{\Del{#1}}{ \color{green}#2}}
+
+\usepackage[normalem]{ulem}
+\usepackage{tikz}
+
+
 % correct bad hyphenation here
 \hyphenation{op-tical net-works semi-conduc-tor}
+
+\input{math}
+\input{abbrev}
+\input{TikZ}
 
 
 \begin{document}
@@ -415,7 +337,7 @@ The abstract goes here.
 
 % Note that keywords are not normally used for peerreview papers.
 \begin{IEEEkeywords}
-IEEE, IEEEtran, journal, \LaTeX, paper, template.
+
 \end{IEEEkeywords}
 
 
@@ -432,6 +354,7 @@ IEEE, IEEEtran, journal, \LaTeX, paper, template.
 
 
 \section{Introduction}
+\label{sec:introduction}
 % The very first letter is a 2 line initial drop letter followed
 % by the rest of the first word in caps.
 % 
@@ -448,9 +371,69 @@ IEEE, IEEEtran, journal, \LaTeX, paper, template.
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart{T}{his} 
-\cite{*}
 
-\section{Conclusion}
+\section{Problem Statement}
+\label{sec:problem}
+%
+\begin{itemize}
+	\item Event definition
+	\item Assignment variables $z_{ij} \in \{0,1\}$ with $\sum_i z_{ij} = 1$ (event of type B can only have one predecessor event of type A)
+	\item Temporal lag $\Delta t_{ij} \DEF t_j - t_i$
+	\item Definition of optimization problem
+	\begin{equation}
+		\min_{Z} \Var\[\Delta t\] = \tfrac{1}{n}\sum_i\sum_j z_{ij} \cdot (\Delta t_{ij} - \mu)^2
+		\label{eq:optimization-problem}
+	\end{equation}	
+	\item Optimization problem in \eqref{eq:optimization-problem} corresponds to binary quadratic program and thus is NP-hard \cite{Katayama2001}
+\end{itemize}
+
+\section{Linear Programming Approximation}
+\label{sec:lp}
+%
+
+\begin{itemize}
+	\item Elimination of quadratic terms results in linear problem 
+		\begin{itemize}
+			\item Proof that neglecting the quadratic term introduces only a small error
+			\item Problem becomes a linear integer program and is equivalent to solving 
+				\begin{equation}
+					\min_Z \E\[\Delta t^2\]
+					\label{eq:optimization-squared}
+				\end{equation}
+			\item Problem is still NP-hard
+		\end{itemize}
+	\item Relaxation to $z_{ij} \in [0,1]$ 
+		\begin{itemize}
+			\item \eqref{eq:optimization-squared} becomes a linear program 
+			\item Polynomial time solution exists
+			\item Relaxation introduces no error, as constraint matrix in unimodular
+		\end{itemize}
+	\item Optimal solution of relaxed problem via sorting
+	\item Generalize by introducing additional constraints (sorting then is suboptimal)
+		\begin{itemize}
+			\item An A event can only generate at most one B event
+			\item A B event can have more than one predecessor
+			\item Constraint on temporal lag like no negative lags allowed
+		\end{itemize}
+	\item Comparison to \cite{Zeng2015}
+		\begin{itemize}
+			\item No assumption on temporal lag distribution
+			\item No initializaion problem
+			\item Calculation of likelihood of B events also possible
+		\end{itemize}
+\end{itemize}
+
+\section{Results}
+\label{sec:results}
+%
+\begin{itemize}
+	\item Artificial problem
+	\item Symantec Data
+\end{itemize}
+
+\section{Conclusion and Future Work}
+\label{sec:conclusion}
+%
 
 
 \appendices
